# json-cpp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  lint.bat
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: types.hpp
src/cli/: main.cpp
src/lib/: types.hpp
src/lib/parsers/: array.cpp  array.hpp  number.cpp  number.hpp  object.cpp  object.hpp  pair.cpp  pair.hpp  string.cpp  string.hpp  value.cpp  value.hpp
src/lib/types/: arraytoken.hpp  falsetoken.hpp  nulltoken.hpp  numbertoken.hpp  objecttoken.hpp  pairtoken.hpp  stringtoken.hpp  token.hpp  truetoken.hpp
tests/: test_main.cpp
tests/lib/parsers/: array_test.cpp  number_test.cpp  object_test.cpp  string_test.cpp  value_test.cpp
tests/lib/types/: array_test.cpp  number_test.cpp  object_test.cpp  pair_test.cpp  string_test.cpp  value_test.cpp
